# SDL_FontCache

./: .gitignore  CMakeLists.txt  README.md  SDL_FontCache.h
cmake/: FindSDL2.cmake  FindSDL2_ttf.cmake
examples/: CMakeLists.txt  main.c
include/SDL_FontCache/: SDL_FontCache.h
src/: CMakeLists.txt  SDL_FontCache.c
